--- a/src/app/component/form/form.component.html
+++ b/src/app/component/form/form.component.html
@@ -48,8 +48,11 @@
       <app-control-mesages [control]="requestForm.get('WantedCharacters')"></app-control-mesages>
     </div>
     <div class="form-group half">
-      <label for="deadline">{{"item.deadline" | translate}}</label>
+      <label>{{"item.deadline" | translate}}</label><br>
+<!--
       <input id="deadline" type="text" formControlName="Deadline" placeholder="{{'item.deadline' | translate}}"/>
+-->
+      <dp-date-picker formControlName="Deadline" [config]="configCalendar"></dp-date-picker>
       <app-control-mesages [control]="requestForm.get('Deadline')"></app-control-mesages>
     </div>
   </div>
