--- a/src/app/component/daschboard/dashboard.component.html
+++ b/src/app/component/daschboard/dashboard.component.html
@@ -49,7 +49,7 @@
     <td>{{request.GoodEnding}}</td>
     <td>{{request.NeedStoryteller}}</td>
     <td>{{request.Storyteller}}</td>
-    <td>{{request.Requestor}}</td>
+    <td>{{requestor(request.Requestor)}}</td>
     <td>{{request.WantedCharacters}}</td>
     <td>{{request.Status}}</td>
 
